docs/apidoc/v3.10/en/delete_instance_association.md
### Functional description

delete association between object's instance.

### Request Parameters

{{ common_args_desc }}

#### General Parameters
| Field                 |  Type      | Required	   |  Description          |
|----------------------|------------|--------|-----------------------------|
| id           | int64     | Yes    | the instance association's unique id             |
| bk_obj_id    | string    | Yes    | the instance association's source or destination object id(v3.10+) |

### Request Parameters Example

``` json
{
    "id": 1,
    "bk_obj_id": "abc"
}
```

### Return Result Example

```json
{
    "result": true,
    "code": 0,
    "message": "",
    "data": "success"
}

```

### Return Result Parameters Description

#### data ：

| Field       | Type     | Description         |
|------------|----------|--------------|
| result | bool | request success or failed. true:success；false: failed |
| code | int | error code. 0: success, >0: something error |
| message | string | error info description |
| data | object | response data |

